# pattern

./: CMakeLists.txt  pattern.cpp  pattern.h
